--- a/menu.html
+++ b/menu.html
@@ -27,7 +27,7 @@
   <main>
     <div id="wrapper">
 
-      <div class="card">
+      <article class="card">
         <div class="img-div"><img src="assets/img/salad.jpg" alt="Turing salad" /></div>
         <div>
           <h2>Turing Salad</h2>
@@ -35,10 +35,11 @@
             Sun-dried tomatos and feta cheese on top of a thin layer of lettuce. Choose between our balsamic, mustard
             or barbecue dressing.
           </p>
-          <button>65 kr.</button>
+          <p class="price">65 kr.</p>
         </div>
-      </div>
-      <div class="card">
+      </article>
+
+      <article class="card">
         <div class="img-div"><img src="assets/img/pizza.jpg" alt="Pizza Berners-Lee" /></div>
         <div>
           <h2>Pizza Berners-Lee</h2>
@@ -46,12 +47,11 @@
             Tomato, mozzarella, pepperoni and rucula. Choose between our thin or
             thick bread base.
           </p>
-          <button>80 kr.</button>
+          <p class="price">80 kr.</->
         </div>
-      </div>
+      </article>
 
-
-      <div class="card">
+      <article class="card">
         <div class="img-div"><img src="assets/img/burger.jpg" alt="Codd Hamburger" /></div>
         <div>
           <h2>Codd Hamburger</h2>
@@ -60,10 +60,11 @@
             and a lot of love. Which sauce do you prefer: BBQ, Dijon or
             mayonaisse? It comes with French fries and coleslaw salad.
           </p>
-          <button>115 kr.</button>
+          <p class="price">115 kr.</p>
         </div>
-      </div>
-      <div class="card">
+      </article>
+
+      <article class="card">
         <div class="img-div"><img src="assets/img/burger.jpg" alt="Cerf Cream" /></div>
         <div>
           <h2>Cerf Cream</h2>
@@ -71,14 +72,14 @@
             Delightful strawberry icecream topped with actual strawberries. In
             cone or vase. Multiple toppings available.
           </p>
-          <button>65 kr.</button>
+          <p class="price">65 kr.</p>
         </div>
-      </div>
+      </article>
 
     </div>
   </main>
   <footer>
-    <p>© 2021-2025 KEA Development</p>
+    <p>&copy 2021-2025 KEA Development</p>
   </footer>
 </body>
 
