--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,6 +8,7 @@
   <link rel="stylesheet" href="css/styles.CSS">
   <link rel="stylesheet" href="css/variables.css">
   <link rel="stylesheet" href="css/contact.css">
+  <script src="js/script.js" defer></script>
 </head>
 
 <body>
@@ -17,73 +17,181 @@
   </header>
   <nav>
     <ul>
-      <li><a href="index.html">Home</a></li>
-      <hr>
-      <li><a href="Menu.html">Menu</a></li>
-      <hr>
-      <li><a href="contact.html">Contact</a></li>
+      <button id="button-home">Home</button>      
+      <button id="button-menu">Menu</button>
+      <button id="button-contact">Contact</button>
     </ul>
   </nav>
-
   <main>
-    <div id="wrapper">
+   <div id="main-content">
 
+   </div>
 
-      <section>
-        <img src="assets/img/map.jpg" alt="kea Restaurant location">
-        <address>
-          <div>
-            <p>Guldbergsgade 29N</p>
-            <p>2200 Copenhagen</p>
-          </div>
-          <div>
-            <p>Phone no.: <strong> 20 82 53 70</strong></p>
-          </div>
-          <div>
-            <p>E-mail: <strong>info@restaurantkea.dk</strong></p>
-          </div>
-        </address>
-      </section>
-
-      <form>
-        <fieldset>
-          <legend>Contact From</legend>
-          <div>
-            <label for="txtName">Full name</label>
-            <input type="text" id="txtName" required/>
-          </div>
-          <div>
-            <label for="txtPhone">Phone no.</label>
-            <input type="text" id="txtPhone" required/>
-          </div>
-          <div>
-            <label for="txtEmail">E-mail</label>
-            <input type="email" id="txtEmail" required/>
-          </div>
-          <div id="nbrPeople">
-            <label for="nbrPerson">Persons</label>
-            <input type="number" id="nbrPerson" required/>
-
-          </div>
-          <div id="date-and-time">
-            <label for="dateTime">Date and time</label>
-            <input type="datetime-local" id="dateTime" required/>
-          </div>
-          <div id="txtComments">
-            <label for="txtComments">Further information</label>
-            <input type="text" id="txtComments" />
-          </div>
-          <div>
-            <button type="submit">Send</button>
-          </div>
-        </fieldset>
-      </form>
-
-    </div>
   </main>
   <footer>
     <p>&copy; 2021-2025 KEA Development</p>
   </footer>
 </body>
+
+<template id="template-home">
+   <article>
+      <div>
+        <img src="assets/img/kea_restaurant.jpg" alt="KEA-Restaurant">
+      </div>
+      <div>
+        <p>
+          We provide a wide variety of fine dishes and beverages at moderate
+          prices. Located in one of the trendiest areas of Copenhagen,
+          Restaurant KEA has been at the forefront of Denmark's culinary life
+          for the past decade. Let us take you on a journey of taste that you
+          will never forget. You will not only not regret it, but you will feel
+          an urge to spread the good news around to your friends and family. So
+          amazing is the food experience at Restaurant KEA. We look forward to
+          serving you.
+        </p>
+        <ul>
+          <li>High quality food</li>
+          <li>Excellent location</li>
+          <li>Attentive personnel</li>
+          <li>Wonderful music</li>
+          <li>Amazing wines</li>
+          <li>Reasonable prices</li>
+        </ul>
+      </div>
+    </article>
+    <aside>
+      <figure>
+        <blockquote>
+          <p>
+            Dining at Restaurant KEA has truly been one of the greatest
+            experiences of my life. Words cannot express the pleasure that I
+            felt while tasting these amazing flavours. It makes all other
+            restaurants pale in comparison, in Denmark and elsewhere.
+          </p>
+        </blockquote>
+        <figcaption> -Mette J. Christensen, <cite>The Food Connoisseur</cite></figcaption>
+    </aside>
+</template>
+
+<template id="template-menu">
+  <div id="wrapper">
+
+    <article class="card">
+      <div class="img-div"><img src="assets/img/salad.jpg" alt="Turing salad" /></div>
+      <div>
+        <h2>Turing Salad</h2>
+        <p>
+          Sun-dried tomatos and feta cheese on top of a thin layer of lettuce. Choose between our balsamic, mustard
+          or barbecue dressing.
+        </p>
+        <p class="price">65 kr.</p>
+      </div>
+    </article>
+
+    <article class="card">
+      <div class="img-div"><img src="assets/img/pizza.jpg" alt="Pizza Berners-Lee" /></div>
+      <div>
+        <h2>Pizza Berners-Lee</h2>
+        <p>
+          Tomato, mozzarella, pepperoni and rucula. Choose between our thin or
+          thick bread base.
+        </p>
+        <p class="price">80 kr.</->
+      </div>
+    </article>
+
+    <article class="card">
+      <div class="img-div"><img src="assets/img/burger.jpg" alt="Codd Hamburger" /></div>
+      <div>
+        <h2>Codd Hamburger</h2>
+        <p>
+          High quality meat, lettuce, tomato, onion, bacon, cheese, jalapenos
+          and a lot of love. Which sauce do you prefer: BBQ, Dijon or
+          mayonaisse? It comes with French fries and coleslaw salad.
+        </p>
+        <p class="price">115 kr.</p>
+      </div>
+    </article>
+
+    <article class="card">
+      <div class="img-div"><img src="assets/img/burger.jpg" alt="Cerf Cream" /></div>
+      <div>
+        <h2>Cerf Cream</h2>
+        <p>
+          Delightful strawberry icecream topped with actual strawberries. In
+          cone or vase. Multiple toppings available.
+        </p>
+        <p class="price">65 kr.</p>
+      </div>
+    </article>
+
+  </div>
+</template>
+
+<template id="template-contact">
+  <div id="wrapper">
+
+
+    <section>
+      <img src="assets/img/map.jpg" alt="kea Restaurant location">
+      <address>
+        <div>
+          <p>Guldbergsgade 29N</p>
+          <p>2200 Copenhagen</p>
+        </div>
+        <div>
+          <p>Phone no.: <strong> 20 82 53 70</strong></p>
+        </div>
+        <div>
+          <p>E-mail: <strong>info@restaurantkea.dk</strong></p>
+        </div>
+      </address>
+    </section>
+
+    <form>
+      <fieldset>
+        <legend>Contact From</legend>
+        <div>
+          <label for="txtName">Full name</label>
+          <input type="text" id="txtName" />
+        </div>
+        <div>
+          <label for="txtPhone">Phone no.</label>
+          <input type="text" id="txtPhone" />
+        </div>
+        <div>
+          <label for="txtEmail">E-mail</label>
+          <input type="text" id="txtEmail" />
+        </div>
+        <div id="nbrPeople">
+          <label for="nbrPerson">Persons</label>
+          <input type="number" id="nbrPerson" />
+
+        </div>
+        <div id="date-and-time">
+          <label for="dateTime">Date and time</label>
+          <input type="datetime-local" id="dateTime" />
+        </div>
+        <div id="txtComments">
+          <label for="txtComments">Further information</label>
+          <input type="text" id="txtComments" />
+        </div>
+        <div>
+          <button type="submit">Send</button>
+        </div>
+      </fieldset>
+    </form>
+
+  </div>
+</template>
+
+
+
+
+
+
+
+
+
 
 </html>
